# justify

./: CMakeLists.txt  README.md  justify.cc
src/: line_accumulator.cc  line_accumulator.h  random.cc  random.h
